fixing homepage property in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hvc02.github.io/rockmetric-assignment",
+  "homepage": "https://hvc02.github.io/rockmetric-assignment",
   "name": "rockmetric-assignment",
   "version": "0.1.0",
   "private": true,
